--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
   </head>
   <body>
     <header class="flex">
-      <p class="header__welcome">
-        Welcome back, <span class="welcome__user">Mohireza</span>
-      </p>
+      <p class="header__welcome">Login to see your account info</p>
       <div class="header__logo"><h1>Mohibank</h1></div>
-      <div class="header__login">
+      <form class="header__login">
         <input
           type="text"
           class="login__input login__input--user"
@@ -26,102 +24,101 @@
           class="login__input login__input--pass"
           placeholder="Pass"
         />
-        <button class="inputs__login">→</button>
-      </div>
+        <button class="inputs__login--btn">→</button>
+      </form>
     </header>
     <main>
       <div class="balance flex">
         <div class="balance__text-container">
           <p class="text-container__text">Current balance</p>
-          <p class="text-container__date">As of 2022/02/23, 06:09 PM</p>
+          <p>
+            As of <span class="text-container__date">2022/02/23, 06:09 PM</span>
+          </p>
         </div>
-        <p class="balance__current">$4345</p>
+        <p class="balance__current">$0000</p>
       </div>
       <section class="info">
         <section class="info__transactions">
-          <div class="trasnactions__movement">
-            <div class="movement__move">
-              <div class="move__label move__label--in">1. deposit</div>
-              <div class="move__date">22/04/02</div>
-              <div class="move__amount">$500</div>
-            </div>
-            <div class="movement__move">
-              <div class="move__label move__label--out">2. withdraw</div>
-              <div class="move__date">22/04/02</div>
-              <div class="move__amount">$500</div>
-            </div>
+          <div class="movement__move">
+            <div class="move__label move__label--in">1. deposit</div>
+            <div class="move__date">22/04/02</div>
+            <div class="move__amount">$0000</div>
+          </div>
+          <div class="movement__move">
+            <div class="move__label move__label--out">2. withdraw</div>
+            <div class="move__date">22/04/02</div>
+            <div class="move__amount">$0000</div>
           </div>
         </section>
         <div class="info__form info__form--transfer">
           <p class="form__title">Transfer money</p>
-          <div class="form__input-container flex">
+          <form class="form__input-container flex">
             <div class="form__input-group">
               <input
-                type="number"
-                class="input-group__input input-group__input--name"
+                type="text"
+                class="input-group__input input-group__input--transfer-to"
               />
               <p class="input-group__text">Name</p>
             </div>
             <div class="form__input-group">
               <input
                 type="number"
-                class="input-group__input input-group__input--amount"
+                class="input-group__input input-group__input--transfer-amount"
               />
               <p class="input-group__text">Amount</p>
             </div>
             <button class="input-group__button input-group__button--transfer">
               →
             </button>
-          </div>
+          </form>
         </div>
         <div class="info__form info__form--loan">
           <p class="form__title">Request loan</p>
-          <div class="form__input-container form__input-container--loan flex">
+          <form class="form__input-container form__input-container--loan flex">
             <div class="form__input-group">
               <input
                 type="number"
-                class="input-group__input input-group__input--loan"
+                class="input-group__input input-group__input--loan-amount"
               />
               <p class="input-group__text">Amount</p>
             </div>
             <button class="input-group__button input-group__button--loan">
               →
             </button>
-          </div>
+          </form>
         </div>
         <div class="info__form info__form--close">
           <p class="form__title">CLOSE ACCOUNT</p>
-          <div class="form__input-container flex">
+          <form class="form__input-container flex">
             <div class="form__input-group">
               <input
-                type="number"
-                class="input-group__input input-group__input--user"
+                class="input-group__input input-group__input--close-user"
               />
               <p class="input-group__text">Username</p>
             </div>
             <div class="form__input-group">
               <input
                 type="number"
-                class="input-group__input input-group__input--pass"
+                class="input-group__input input-group__input--close-pass"
               />
               <p class="input-group__text">Password</p>
             </div>
             <button class="input-group__button input-group__button--close">
               →
             </button>
-          </div>
+          </form>
         </div>
       </section>
       <section class="details flex">
         <div class="details__sums flex">
           <div class="sums__num sums__num--in">
             <p class="num__text">
-              in: <span class="num__number num__number--in">$3205</span>
+              in: <span class="num__number num__number--in">$0000</span>
             </p>
           </div>
           <div class="sums__num sums__num--out">
             <p class="num__text">
-              out: <span class="num__number num__number--out">$1123</span>
+              out: <span class="num__number num__number--out">$0000</span>
             </p>
           </div>
           <div class="sums__num sums__num--interest">
@@ -134,10 +131,11 @@
         <button class="details__sort">↓ SORT</button>
         <div class="details__timer">
           <p class="timer__text">
-            You will be logged out in <span class="timer__time">05:00</span>
+            You will be logged out in <span class="timer__time">00:00</span>
           </p>
         </div>
       </section>
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
