--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         <div class="balance__text-container">
           <p class="text-container__text">Current balance</p>
           <p>
-            As of <span class="text-container__date">2022/02/23, 06:09 PM</span>
+            As of
+            <span class="text-container__date" dir="auto"
+              >2022/02/23, 06:09 PM</span
+            >
           </p>
         </div>
         <p class="balance__current">$0000</p>
@@ -131,7 +134,7 @@
         <button class="details__sort">↓ SORT</button>
         <div class="details__timer">
           <p class="timer__text">
-            You will be logged out in <span class="timer__time">00:00</span>
+            You will be logged out in <span class="timer__time">05:00</span>
           </p>
         </div>
       </section>
